--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         <activity android:name=".SubjectsActivity"></activity>
         <activity android:name=".GroupsActivity"></activity>
         <activity android:name=".StudentsActivity"></activity>
+        <activity android:name=".EditMarkActivity"></activity>
+        <activity android:name=".MenuActivity"></activity>
+        <activity android:name=".ViewAllStudentsActivity"></activity>
 
     </application>
 
